# IronLog-V2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
deploy/: ironlogv2.service
deploy/migrations/: 000_baseline.sql  001_add_movement_knee_modality.sql  002_add_movementstate_consecutive_failed_progressions.sql  003_add_e1rmhistory_table.sql  README.md
docs/: 01_ht_composite_spec.md  02_calibration_block_spec.md  03_progression_model_spec.md  04_exercise_library_schema.md  05_session_setlog_schema.md  06_generation_algorithm_spec.md  exercise_verification.xlsx
docs/superpowers/plans/: 2026-06-24-validator-impl.md  2026-06-24-weekly-ledger-impl.md  2026-06-25-analysis-hook-impl.md  2026-06-25-migrations-impl.md  2026-06-26-v05-analyzers-impl.md  2026-06-27-library-130-import-impl.md
docs/superpowers/specs/: 2026-06-24-validator-design.md  2026-06-24-weekly-ledger-design.md  (+4 more)
docs/tasks/: 2026-06-27-overnight-status.md
ironlog/: __init__.py  db.py  migrate.py  seed.py
ironlog/api/: app.py
ironlog/engine/: __init__.py  analysis.py  autoregulate.py  calibration.py  e1rm.py  generation.py  ledger.py  loading.py  progression.py  stall.py  validator.py
ironlog/models/: __init__.py  enums.py  library.py  session.py
ironlog/persistence/: apply.py  run_analysis.py
tests/: test_analysis.py  test_apply_analysis.py  test_autoregulate.py  test_calibration.py  test_e1rm.py  test_ledger.py  test_library_seed.py  test_loading.py  test_migrations.py  test_progression.py  test_run_analysis.py  test_stall.py  test_validator.py
