[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ironlog-v2"
version = "0.1.0"
description = "Adaptive strength-training engine (V2)"
requires-python = ">=3.10"
dependencies = [
    "sqlmodel>=0.0.38",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["ironlog*"]
